--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="dom4j/dom4j-2.0.0-ALPHA-2-sources.jar"/>
+	<classpathentry kind="lib" path="dom4j/dom4j-2.0.0-ALPHA-2.jar"/>
+	<classpathentry kind="lib" path="junit/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="junit/junit-4.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="junit/junit-4.11.jar"/>
+	<classpathentry kind="lib" path="dom4j/dom4j-2.0.0-ALPHA-2-javadoc.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
